# distributed-LB-IB

./: .gitignore  Makefile  README.md  compute_eqlbrmdistrfuncDF1.c  compute_rho_and_u.c  compute_stretchingforce.c  copy_inout_to_df2.c  cube2thread_and_machine.c  do_thread.h  init_df_inout.c  init_eqlbrmdistrfuncDF0.c  init_gv.c  main.c  print_info.c
cube_pthread/: .lbm_ib.c.swp  Makefile  README  commands  commands2  commands3  lbm_ib.c  verify.sh
cube_pthread/scripts/bridges/: 4x4x4.job  SM.job  common.sh  test.job
foward_error_analysis/: Makefile  fwa.c
mpi/: 1d.sh  2d.sh  3d.sh  CMakeLists.txt  Makefile  bounceback_rigidwalls.c  changelog  compute_bendingforce.c  compute_elasticforce.c  compute_eqlbrmdistrfuncDF1.c  compute_rho_and_u.c  compute_stretchingforce.c  config.h.in  copy_inout_to_df2.c  cube2thread_and_machine.c  cube2thread_and_task.c  do_thread.c  do_thread.h  fiber2thread.c  fiber_SpreadForce.c  fiber_get_SpreadVelocity.c  fluid_SpreadVelocity.c  fluid_get_SpreadForce.c  gen_fiber_shape.c  gen_fiber_sheet.c  gen_fluid_grid.c  init_df1.c  init_df_inout.c  init_eqlbrmdistrfuncDF0.c  init_gv.c  inter.sh  lb.h  main.c  moveFiberSheet.c  periodicBC.c  print_info.c  replace_old_DF.c  stream_distrfunc.c  test.pbs  timer.h  (+2 more)
mpi/include/: do_thread.h
mpi/results/: do_exp_log.py
mpi/scripts/bridges/: 1.job  1x20.job  3x3x3.job  common.sh
mpi/scripts/bridges/strong/: 1.job  1_small.job  strong_1x128_x.job  strong_1x16_x.job  strong_1x16_y.job  strong_1x2_x.job  strong_1x2_y.job  strong_1x32_x.job  strong_1x32_y.job  strong_1x4_x.job  strong_1x4_y.job  strong_1x64_x.job  strong_1x64_y.job  strong_1x8_x.job  strong_1x8_y.job  strong_2x2_xy.job  strong_2x2x2.job  strong_2x2x4.job  strong_2x4_xy.job  strong_2x4x2.job  strong_2x4x4.job  strong_2x4x8.job  strong_2x8_xy.job  strong_2x8x4.job  strong_4x2_xy.job  strong_4x2x2.job  strong_4x2x4.job  strong_4x2x8.job  strong_4x4_xy.job  strong_4x4x2.job  strong_4x4x4.job  strong_4x8_xy.job  strong_4x8x2.job  strong_8x2_xy.job  strong_8x2x4.job  strong_8x4_xy.job  strong_8x4x2.job  strong_8x8_xy.job
mpi/scripts/bridges/weak/: weak_1x16_x.job  weak_1x16_y.job  weak_1x2_x.job  weak_1x2_y.job  weak_1x2_z.job  weak_1x3.job  weak_1x32_x.job  weak_1x32_y.job  weak_1x4_x.job  weak_1x4_y.job  weak_1x4_z.job  weak_1x6.job  weak_1x64_x.job  weak_1x64_y.job  weak_1x8_x.job  weak_1x8_y.job  weak_2x2_xy.job  weak_2x2_xz.job  weak_2x2_yz.job  weak_2x2x2.job  weak_2x2x4.job  weak_2x3.job  weak_2x4_xy.job  weak_2x4x2.job  weak_2x4x4.job  weak_2x8_xy.job  weak_3x3x3.job  weak_4x2_xy.job  weak_4x2x2.job  weak_4x2x4.job  weak_4x4_xy.job  weak_4x4x10_large.job  weak_4x4x2.job  weak_4x4x4.job  weak_4x4x8_large.job  weak_4x8_xy.job  weak_5x5x5.job  weak_6x6x6.job  weak_8x2_xy.job  weak_8x4_xy.job  (+1 more)
mpi/src/: bounceback_rigidwalls.cpp  compute_bendingforce.cpp  compute_elasticforce.cpp  compute_eqlbrmdistrfuncDF1.cpp  compute_rho_and_u.cpp  copy_inout_to_df2.cpp  cube2thread.cpp  do_thread.cpp  fluid_SpreadVelocity.cpp  fluid_get_SpreadForce.cpp  gen_fiber_sheet.cpp  gen_fluid_grid.cpp  init_df1.cpp  init_df_inout.cpp  init_eqlbrmdistrfuncDF0.cpp  init_gv.cpp  main.cpp  moveFiberSheet.cpp  print_info.cpp  replace_old_DF.cpp  stream_distrfunc.cpp
